# Pandora

./: .gitignore  CMakeLists.txt  README.md  build.sh  main.cpp  package.json  webpack.config.js
assets/shader/: fragment-texture2d.glsl  fragment.glsl  fragment2D.glsl  vertex-texture2d.glsl  vertex.glsl  vertex2D.glsl
include/: glad.c
include/glad/: glad.h
public/: index.html
src/: Game.cpp  index.html  index.js  main.cpp
src/components/: Render.h  Shader.h  Transform.h
src/core/: Application.cpp  Application.h  GUI.cpp  GUI.h  Game.cpp  Game.h  Game.hpp  GridMap.cpp  GridMap.h  Shader.cpp  Shader.h  Terrain.cpp  Terrain.h  UIManager.cpp  UIManager.h  Window.cpp  Window.h  app.cpp  app.hpp
src/core/game-state/: GameState.h
src/core/ui/: Button.cpp  Button.h  Constraints.cpp  Constraints.h  CoreComponent.cpp  CoreComponent.h  UIComponent.cpp  UIComponent.h
src/gui/: InventoryBar.cpp  InventoryBar.h  MainMenu.cpp  MainMenu.h
src/management/: Render.cpp  Render.h
src/scripts/: window.lua
src/shaders/: simple_frag.glsl  simple_vert.glsl
src/system/: interactions.cpp  interactions.h  render.cpp  render.h  transformations.cpp  transformations.h
src/util/: Camera.cpp  Camera.h  Maths.h  files.cpp  files.h  registry.h  registry.hpp
